# passmanager

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/: config.py  main.py  message.py  random_password.py
src/database/: database.py  model.py
tests/: test_config_file.py  test_random_password.py
